<resources>
    <string name="app_name">userProfile</string>
    <string name="defaultName">Name</string>
    <string name="followBtnText">Follow</string>
    <string name="postsText">Posts</string>
    <string name="followersText">Followers</string>
    <string name="followingText">Following</string>
    <string name="phoneText">Phone</string>
    <string name="emailText">Email</string>
    <string name="scooby">Scooby</string>
    <string name="online">online</string>
    <string name="shaggy">Shaggy</string>
    <string name="yesterday">yesterday</string>
    <string name="welma">Welma</string>
    <string name="_5_min_ago">5 min ago</string>
    <string name="dafna">Dafna</string>
    <string name="fred">Fred</string>
    <string name="_6_hour_ago">6 hour ago</string>
    <string name="mummy">Mummy</string>
    <string name="a_long_time_ago">a long time ago</string>
    <string name="ghost">Ghost</string>
    <string name="user_s_photo">User\'s photo</string>
    <string name="bio">BIo</string>
    <string name="save">Save</string>
    <string name="description">photo</string>
    <string name="title_activity_item">item</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create">Create</string>
</resources>