<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditProfileActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/defaultName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastSeenEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/online"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/postsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/postsText"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/lastSeenEditText"
        app:layout_constraintTop_toBottomOf="@+id/lastSeenEditText" />

    <EditText
        android:id="@+id/followersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/followersText"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/postsEditText"
        app:layout_constraintTop_toBottomOf="@+id/postsEditText" />

    <EditText
        android:id="@+id/followingEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/followingText"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/followersEditText"
        app:layout_constraintTop_toBottomOf="@+id/followersEditText" />

    <EditText
        android:id="@+id/bioEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/bio"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/followingEditText"
        app:layout_constraintTop_toBottomOf="@+id/followingEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phoneText"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/bioEditText"
        app:layout_constraintTop_toBottomOf="@+id/bioEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="none|textEmailAddress|textEmailSubject"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/photoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Photo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/saveChangesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>