<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/scooby_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scooby"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/shaggy_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shaggy"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto3"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/welma_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welma"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_min_ago"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto4"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/dafna_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dafna"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto5"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/fred_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fred"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_6_hour_ago"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto6"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/mummy_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mummy"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_long_time_ago"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userPhoto7"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:srcCompat="@drawable/ghost_ava"
                android:contentDescription="@string/user_s_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ghost"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/lastSeen7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_long_time_ago"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

